--- a/src/series/views/Dashboard.form
+++ b/src/series/views/Dashboard.form
@@ -33,11 +33,11 @@
                       <Component id="btnCreate" min="-2" pref="90" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnUpdate" min="-2" pref="90" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnSwitchState" min="-2" pref="90" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="btnDelete" min="-2" pref="90" max="-2" attributes="0"/>
-                      <EmptySpace pref="300" max="32767" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="btnSwitchState" min="-2" pref="129" max="-2" attributes="0"/>
+                      <EmptySpace pref="253" max="32767" attributes="0"/>
                       <Component id="btnExit" min="-2" pref="90" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
@@ -129,10 +129,10 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnSwitchState">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Anular"/>
+        <Property name="text" type="java.lang.String" value="Anular / Activar"/>
         <Property name="actionCommand" type="java.lang.String" value="switchState"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[77, 30]"/>
+          <Dimension value="[100, 30]"/>
         </Property>
       </Properties>
       <AccessibilityProperties>
@@ -174,6 +174,7 @@
                 <Column editable="true" title="Title 4" type="java.lang.Object"/>
               </Table>
             </Property>
+            <Property name="selectionMode" type="int" value="0"/>
           </Properties>
         </Component>
       </SubComponents>
